[package]
name = "fixedstep"
version = "0.3.0"
authors = ["HeroesGrave"]
description = "Simple macro to create a fixed timestep loop for a game"
repository = "https://github.com/HeroesGrave/fixedstep-rs"
homepage = "https://github.com/HeroesGrave/fixedstep-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "game",
    "loop",
    "fixed",
    "timestep",
]

[dependencies]
